--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -5,6 +5,9 @@ on:
     branches: [ main, develop ]
     types: [opened, synchronize, reopened, ready_for_review]
 
+permissions:
+  contents: read
+
 env:
   GO_VERSION: '1.24.11'
 
