--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -200,7 +200,26 @@ jobs:
       run: go install golang.org/x/vuln/cmd/govulncheck@latest
 
     - name: Run govulncheck
-      run: govulncheck ./...
+      run: |
+        set +e
+        OUTPUT=$(govulncheck ./... 2>&1)
+        EXIT_CODE=$?
+        echo "$OUTPUT"
+
+        if [ $EXIT_CODE -ne 0 ]; then
+          {
+            echo "## :shield: govulncheck found vulnerabilities"
+            echo ""
+            echo '```'
+            echo "$OUTPUT"
+            echo '```'
+            echo ""
+            echo "**Fix:** Update the Go version or affected dependencies as indicated above."
+          } >> "$GITHUB_STEP_SUMMARY"
+          exit $EXIT_CODE
+        else
+          echo ":white_check_mark: **govulncheck** — no vulnerabilities found" >> "$GITHUB_STEP_SUMMARY"
+        fi
 
     - name: Check for outdated dependencies
       run: make outdated
